added hobbies to profile and register page

--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -91,6 +91,18 @@
     <span class="text-white bg-dark">Email: <input type="text"  class="form-control" id="profileemail" value="{{member.email}}"></span>
     <br>    <input type="file" name="myFile" id='regprofileimage{{member.id}}' onchange={uploadProfilePicture(event,'{{member.id}}')} style="display:none" >
 
+    <div class="form-group ">
+        <label for="profilehobby" class="text-white bg-dark">Hobbies</label>
+        <select  id="profilehobby" name="hobbies" multiple="multiple">
+            {% for value in Hobby %}
+                {% if value in member.hobbies.all %}
+                <option selected value="{{value.hobby}}">{{value.hobby}}</option>
+                {% else %}
+                <option value="{{value.hobby}}">{{value.hobby}}</option>
+                {% endif %}
+            {% endfor %}
+        </select>
+    </div>
 
     {% endif %}
 
