--- a/thundersite/thunderapp/templates/thunderapp/messages.html
+++ b/thundersite/thunderapp/templates/thunderapp/messages.html
@@ -1,4 +1,57 @@
 {% extends "thunderapp/base.html" %}
+{% load extras %}
+{% load staticfiles %}
+
 
 {% block content %}
+
+
+
+<div class="text-white">
+
+
+    {% if username == view %}
+<h3>Your Messages</h3>
+{% else %}
+<h3><a>{{view}}</a>'s Messages</h3>
+{% endif %}
+<form id='msg-form' name='msg-form' method='POST' action="{% url 'postmessage' %}{% if username != view %}?view={{view}}{% endif %}" class="text-white">
+    <select name="msg-form" multiple="multiple"> Select User to message
+        <option>stevie</option>
+
+    </select>
+
+    <br/>
+
+
+    {% csrf_token %}
+    Type here to leave a message:
+    <br>
+    <textarea name='text' cols='40' rows='3'></textarea>
+    <br>
+    Public<input type='radio' class='pm_class' name='pm' value='0' checked='checked'>
+    Private<input type='radio' class='pm_class' name='pm' value='1'>
+    <input type='hidden' maxlength='26' name='recip' value='{{view}}'>
+    <input type='submit' id='post-msg-btn' value='Post Message'>
+</form>
+<br>
+<div id='messages-div' class="text-white">
+    {% if messages %}
+    {% for message in messages %}
+    {% autoescape off %}
+    {{ message|display_message:username }}
+    {% endautoescape %}
+    {% endfor %}
+    {% else %}
+    <br><span class='info'>No messages yet</span><br><br>
+    {% endif %}
+</div>
+<br><a class='button' >Refresh messages</a>
+
+</div>
+
+<script type="text/javascript" src="{% static 'message.js' %}"></script>
+
+
+
 {% endblock %}
