list of members now displayed in order of common hobbies

--- a/thundersite/thunderapp/templates/thunderapp/listofmembers.html
+++ b/thundersite/thunderapp/templates/thunderapp/listofmembers.html
@@ -18,7 +18,7 @@
                 <input type="text" id="search" name="search" placeholder="Filter Members"/>
                     <span>
 
-                             <input type="radio" id="genderBtn1" name="genderBtn" value=''> All
+                             <input type="radio" id="genderBtn1" name="genderBtn" checked="checked" value=''> All
                         <input type="radio" id="genderBtn2" name="genderBtn" value="Male"> Male
                     <input type="radio" id="genderBtn3" name="genderBtn" value="Female"> Female
 
