--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 
-<div class="container-fluid w3-animate-left carousel-fade" >
+<div id="profile" class="container-fluid w3-animate-left carousel-fade" >
     <section class="container">
         <div class="container-page">
             <div class='main-login main-centre'>
