--- a/thundersite/thunderapp/templates/thunderapp/alerts.html
+++ b/thundersite/thunderapp/templates/thunderapp/alerts.html
@@ -28,7 +28,7 @@ text-align: center;
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <strong>Login Success!</strong>
+    <strong>Login Success! Taking You To Your Profile....</strong>
 </nav>
 <nav id="errorLoginAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -42,7 +42,7 @@ text-align: center;
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
-    <strong>Registration successful!</strong>
+    <strong>Registration successful! Taking You To Login Page....</strong>
 </nav>
 <nav id="errorRegisterAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -50,5 +50,15 @@ text-align: center;
     </button>
     <strong>Registration Failed!</strong> Please check fields and try again. If error persists, please contact Helpdesk
 </nav>
-
+<nav id="usernameerrorRegisterAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Username already exists!</strong> Please enter a different username and try again. If error persists, please contact Helpdesk
+</nav><nav id="ageerrorRegisterAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Invalid Age!</strong> Members must be 18+
+</nav>
 {% endblock %}
