add max size for profile image

--- a/thundersite/thunderapp/templates/thunderapp/login.html
+++ b/thundersite/thunderapp/templates/thunderapp/login.html
@@ -14,7 +14,13 @@
     {% include "thunderapp/background.html" %}
 
     {% endblock %}
+<style>
+.profileImage{
+height:200px;
 
+max-width:200px;
+}
+</style>
 <div class="container-fluid" style="background:#343a40!important">
     <br>
     <br>
