--- a/thundersite/thunderapp/templates/thunderapp/matchlist.html
+++ b/thundersite/thunderapp/templates/thunderapp/matchlist.html
@@ -1,13 +1,26 @@
 {% extends "thunderapp/base.html" %}
+{% load staticfiles %}
 
 {% block content %}
+<div id="profile" class="container-fluid w3-animate-left carousel-fade" >
+
     <h3>Guess who has a match! :)</h3>
+    <section class="container">
+        <div class="container-page">
+            <div class='main-login main-centre'>
     <div class="card-columns" >
         {% for match in currentMember %}
             {% url 'friendprofile' as profile_url %}
             <a href="{{ profile_url }}/profile/{{ match.pk }}">
             <div class="card" style="width: 18rem; height: 30%; border-color: #e1000e">
-              <img class="card-img-top" src="{{ match.profileImage.url }}" alt="Card image cap" style=" max-width: 18em; height: 80%;">
+                {% if match.profileImage %}
+                <img id='imagecard' class=" img-fluid card-img-top" style=" max-width: 18em; height: 80%;" alt="Not found" onerror="this.src='{{STATIC_URL}}/static/image-not-found.png'" height=150 src='{{ match.profileImage.url }}'>
+
+                {% else %}
+
+                <img id='imagecard' class="img-fluid card-img-top" style=" max-width: 18em; height: 80%;" alt="Not found" height=150 src="{% static '/profile-image.jpg' %}">
+
+                {% endif %}
               <h4 class="card-title"><b>. {{ match.firstName }}</b></h4>
             </div>
             </a>
@@ -29,5 +42,9 @@
         }
     </style>
 
+            </div>
+        </div>
+    </section>
+</div>
 {% endblock %}
 
