--- a/thundersite/thunderapp/templates/thunderapp/searchmembers.html
+++ b/thundersite/thunderapp/templates/thunderapp/searchmembers.html
@@ -44,6 +44,7 @@
                 }
             </script>
         </div>
+        <script type="text/javascript" src="{% static 'followFriend.js' %}"></script>
 
 
         {% endfor %}
