fix reload when user clicks follow. Fix alert notification

--- a/thundersite/thunderapp/templates/thunderapp/alerts.html
+++ b/thundersite/thunderapp/templates/thunderapp/alerts.html
@@ -55,10 +55,25 @@ text-align: center;
         <span aria-hidden="true">&times;</span>
     </button>
     <strong>Username already exists!</strong> Please enter a different username and try again. If error persists, please contact Helpdesk
-</nav><nav id="ageerrorRegisterAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
+</nav>
+<nav id="ageerrorRegisterAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     <strong>Invalid Age!</strong> Members must be 18+
+</nav>
+
+<nav id="followMembersuccessAlert" class="alert alert-success alert-dismissible fade show " role="alert" style="display:none" >
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>You have added a new friend! If they follow you back you will see them in the matches tab!</strong>
+</nav>
+
+<nav id="followMembererrorAlert" class="alert alert-danger alert-dismissible fade show " role="alert" style="display:none" >
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <strong>Follow failed!</strong> Please try again. If error persists, please contact Helpdesk
 </nav>
 {% endblock %}
