add style to pages

--- a/thundersite/thunderapp/templates/thunderapp/listofmembers.html
+++ b/thundersite/thunderapp/templates/thunderapp/listofmembers.html
@@ -26,6 +26,11 @@
                     <input type="radio" id="genderBtn3" name="genderBtn" value="Female"> Female
 
                     </span>
+
+                </div>
+                <br/>
+                <div class="bordercontainer text-white bg-dark">
+                    Users with similar hobbies are suggested below!!!
                 </div>
                 <br>
 <br>
