--- a/thundersite/thunderapp/templates/thunderapp/searchmembers.html
+++ b/thundersite/thunderapp/templates/thunderapp/searchmembers.html
@@ -7,7 +7,13 @@
 
         {% for m in members %}
         <br>
-        <div class="form-group  text-white bg-dark w3-animate-bottom carousel-fade" >
+
+        {% if forloop.first	 %}
+
+
+        <div class="form-group  text-dark bg-warning w3-animate-bottom carousel-fade font-weight-bold" >
+           <br/>
+            <h2>****** Your Closest Match!!! ******</h2>
             <br>
 
             {% if m.profileImage %}
@@ -31,6 +37,52 @@
             <br>
             <input type="button" class="btn btn-success btn-lg" value="Follow" onClick="this.disabled=true; this.value='Friends'; setColor(event); followMember({{ m.id }})"/>
             <br>                        <br>
+            <div>
+                <h2 class="font-weight-bold">*********************************</h2>
+            </div>
+            <br/>
+            <script>
+                function setColor(e) {
+                    var target = e.target,
+                        count = +target.dataset.count;
+
+                    target.style.backgroundColor = '#ff000e';
+                    target.style.borderColor = '#ff000e';
+
+                    target.dataset.count = count === 1 ? 0 : 1;
+                }
+            </script>
+        </div>
+        <script type="text/javascript" src="{% static 'followFriend.js' %}"></script>
+
+
+        {% else %}
+
+
+        <div class="form-group  text-white bg-dark w3-animate-bottom carousel-fade" >
+            <br>
+
+            {% if m.profileImage %}
+
+            <img class="rounded-circle img-fluid profileImage" onerror="this.src='{{STATIC_URL}}/static/image-not-found.png'" alt="Not found" height=150 width="150" src='{{ m.profileImage.url }}'>
+
+            {% else %}
+
+            <img  class="rounded-circle img-fluid profileImage" alt="Not found" height=100 src="{% static '/profile-image.jpg' %}">
+
+            {% endif %}
+            <br>
+            <br>
+
+
+            <div>Name: {{m.firstName}} {{m.lastName}}</div>
+            <br>
+            <div>Gender: {{m.gender}}</div>
+            <br>
+            <div>Date Of Birth: {{m.dateOfBirth}}</div>
+            <br>
+            <input id="followFriend" type="button" class="btn btn-success btn-lg" value="Follow" onClick="this.disabled=true; this.value='Friends'; setColor(event); followMember({{ m.id }})"/>
+            <br>                        <br>
 
             <script>
                 function setColor(e) {
@@ -45,6 +97,8 @@
             </script>
         </div>
         <script type="text/javascript" src="{% static 'followFriend.js' %}"></script>
+        {% endif %}
+
 
 
         {% endfor %}
