--- a/thundersite/thunderapp/templates/thunderapp/profile.html
+++ b/thundersite/thunderapp/templates/thunderapp/profile.html
@@ -51,7 +51,7 @@
                 </div>
                 <br>
 
-                <div class="bordercontainer">
+                <div class="bordercontainer w3-animate-bottom">
                     {% if loggedin %}
 
                     <label id="profilePicture" for="regprofileimage{{member.id}}"  data-toggle="tooltip" title="Upload Profile Image">
@@ -81,7 +81,7 @@
 
                 </div>
 
-<div>
+<div class="w3-animate-bottom">
     <br>
     {% if loggedin %}
 
