--- a/thundersite/thunderapp/templates/thunderapp/base.html
+++ b/thundersite/thunderapp/templates/thunderapp/base.html
@@ -14,62 +14,7 @@
     <title>Thunder Site</title>
 </head>
 <body style="background:#343a40!important">
-<nav class="navbar navbar-expand-md navbar-dark sticky-top " style="background-color: #e1000e;">
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
-        <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="collapse_target">
-        <a class="navbar-brand"><img src="{%  static 'thunderIcon.png' %}" style="border-radius: 10px;" alt="" width="36" height="36"></a>
-        <span class="navbar-text text-white">Thunder</span>
-        <ul class="navbar-nav">
-            {% if loggedin %}
-            <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ messages_url }}/messages/">Messages</a>
-            </li>
-            <li class="nav-item">
-                {% url 'profile' as profile_url %}
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ profile_url }}/profile/">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ profiles_url }}/profiles/">Find Friends</a>
-            </li>
-            <li class="nav-item">
-                {% url 'matchlist' as matchlist_url %}
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ matchlist_url }}/matchlist/">Matches</a>
-            </li>
-            <li class="nav-item">
-                {% url 'logout' as logout_url %}
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ logout_url }}/logout/">Log Out</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ login_url }}/login/">Log in</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white hvr-underline-from-center" href="{{ register_url }}/register/">Sign Up</a>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
-</nav>
-
-{% block content  %}
-{% endblock %}
-
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script type="text/javascript" src="{% static 'file_upload.js' %}"></script>
-<script type="text/javascript" src="{% static 'edit_profile_details.js' %}"></script>
-<script type="text/javascript" src="{% static 'register.js' %}"></script>
-<script type="text/javascript" src="{% static 'sol.js' %}"></script>
-<script type="text/javascript" src="{% static 'listProfiles.js' %}"></script>
-<script type="text/javascript" src="{% static 'search_members.js' %}"></script>
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
     .hvr-underline-from-center {
         display: inline-block;
@@ -103,6 +48,77 @@
         left: 0;
         right: 0;
     }
+
+    .loggedinprofileImage{
+        height:50px;
+
+        max-width:50px;
+    }
+
 </style>
+<nav class="navbar navbar-expand-md navbar-dark sticky-top " style="background-color: #e1000e;">
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="collapse_target">
+        <a class="navbar-brand w3-animate-left"><img src="{%  static 'thunderIcon.png' %}" style="border-radius: 10px;" alt="" width="36" height="36"></a>
+        <span class="navbar-text text-white w3-animate-left">Thunder</span>
+        <ul class="navbar-nav">
+            {% if loggedin %}
+
+            <li class="nav-item w3-animate-top">
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ messages_url }}/messages/">Messages</a>
+            </li>
+            <li class="nav-item w3-animate-top">
+                {% url 'profile' as profile_url %}
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ profile_url }}/profile/">Profile</a>
+            </li>
+            <li class="nav-item w3-animate-top">
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ profiles_url }}/profiles/">Find Friends</a>
+            </li>
+            <li class="nav-item w3-animate-top">
+                {% url 'matchlist' as matchlist_url %}
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ matchlist_url }}/matchlist/">Matches</a>
+            </li>
+            <li class="nav-item w3-animate-top">
+                {% url 'logout' as logout_url %}
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ logout_url }}/logout/">Log Out</a>
+            </li>
+            {% else %}
+            <li class="nav-item w3-animate-top">
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ login_url }}/login/">Log in</a>
+            </li>
+            <li class="nav-item w3-animate-top">
+                <a class="nav-link text-white hvr-underline-from-center" href="{{ register_url }}/register/">Sign Up</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </div>
+    {% if currentmember %}
+    <div class="w3-animate-right">
+    <img id='loggedin-img' class="rounded-circle img-fluid loggedinprofileImage" alt="Not found" height=50 onerror="this.src='{{STATIC_URL}}/static/image-not-found.png'"  src='{{ currentmember.profileImage.url }}'>
+    </div>
+    {% endif %}
+</nav>
+
+{% block content  %}
+{% endblock %}
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{% static 'file_upload.js' %}"></script>
+<script type="text/javascript" src="{% static 'edit_profile_details.js' %}"></script>
+<script type="text/javascript" src="{% static 'register.js' %}"></script>
+<script type="text/javascript" src="{% static 'sol.js' %}"></script>
+<script type="text/javascript" src="{% static 'listProfiles.js' %}"></script>
+<script type="text/javascript" src="{% static 'search_members.js' %}"></script>
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </body>
 </html>
