--- a/thundersite/thunderapp/templates/thunderapp/messages.html
+++ b/thundersite/thunderapp/templates/thunderapp/messages.html
@@ -4,54 +4,95 @@
 
 
 {% block content %}
-
-
-
-<div class="text-white">
-
-
-    {% if username == view %}
-<h3>Your Messages</h3>
-{% else %}
-<h3><a>{{view}}</a>'s Messages</h3>
-{% endif %}
-<form id='msg-form' name='msg-form' method='POST' action="{% url 'postmessage' %}{% if username != view %}?view={{view}}{% endif %}" class="text-white">
-    <select name="msg-form" multiple="multiple"> Select User to message
-        <option>stevie</option>
-
-    </select>
-
-    <br/>
-
-
-    {% csrf_token %}
-    Type here to leave a message:
-    <br>
-    <textarea name='text' cols='40' rows='3'></textarea>
-    <br>
-    Public<input type='radio' class='pm_class' name='pm' value='0' checked='checked'>
-    Private<input type='radio' class='pm_class' name='pm' value='1'>
-    <input type='hidden' maxlength='26' name='recip' value='{{view}}'>
-    <input type='submit' id='post-msg-btn' value='Post Message'>
-</form>
-<br>
-<div id='messages-div' class="text-white">
-    {% if messages %}
-    {% for message in messages %}
-    {% autoescape off %}
-    {{ message|display_message:username }}
-    {% endautoescape %}
-    {% endfor %}
-    {% else %}
-    <br><span class='info'>No messages yet</span><br><br>
-    {% endif %}
+<div class="dashboard-main-wrapper">
+    <div class="menu-list">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="d-xl-none d-lg-none" href="#">Dashboard</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            </button>
+            <div class="nav-left-sidebar sidebar-dark">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav flex-column">
+                        <li class="nav-divider">
+                            Messages
+                        </li>
+                        {% for followingMember in member.following.all %}
+                            {% if member in followingMember.following.all %}
+                                <li class="nav-item ">
+                                    <a class="nav-link" onclick="getMessage({{followingMember.id}})" id="{{ followingMember.id }}" >
+                                        {{followingMember.firstName}}
+                                    </a>
+                                </li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="dashboard-wrapper">
+        <div class="main-container">
+            <div class="content-container">
+                <div class="chat-module">
+                    <div class="chat-module-top">
+                        <div class="chat-module-body" id="messages-div">
+                            <br><span class='info'>No messages yet... Click on a user to display a message</span><br><br>
+                        </div>
+                    </div>
+                    <div class="chat-module-bottom">
+                        <form class="chat-form">
+                            {% csrf_token %}
+                            <input type='hidden' maxlength='26' name='recip' value='' required>
+                            <div class="input-group-append">
+                                <textarea class="form-control" id="messageContent" name="messageContent" placeholder="Type message" rows="1" required></textarea>
+                                <button type="button" class="btn btn-primary" id="messageSend">Send</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<br><a class='button' >Refresh messages</a>
+<script type="text/javascript">
+    function getMessage(followingUserId) {
+        $('input[name=recip]').val(followingUserId);
+        $.ajax({
+            type : "GET",
+            url : "/getMessages/",
+            data: {
+                'followingUserId' : followingUserId
+            },
+            success : function(data) {
+                $("#messages-div").html(data);
+            },
+            error: function(jqXHR, textStatus, error) {
+                console.log(error);
+            }
+        });
 
-</div>
-
-<script type="text/javascript" src="{% static 'message.js' %}"></script>
-
+    }
+    {#// Get the container element#}
+    {#var btnContainer = document.getElementById("myDIV");#}
+    {##}
+    {#// Get all buttons with class="btn" inside the container#}
+    {#var btns = btnContainer.getElementsByClassName("btn");#}
+    {##}
+    {#// Loop through the buttons and add the active class to the current/clicked button#}
+    {#for (var i = 0; i < btns.length; i++) {#}
+    {#    btns[i].addEventListener("click", function() {#}
+    {#        var current = document.getElementsByClassName("active");#}
+    {##}
+    {#        // If there's no active class#}
+    {#        if (current.length > 0) {#}
+    {#            current[0].className = current[0].className.replace(" active", "");#}
+    {#        }#}
+    {##}
+    {#        // Add the active class to the current/clicked button#}
+    {#        this.className += " active";#}
+    {#    });#}
+    {##}
+</script>
 
 
 {% endblock %}
