--- a/thundersite/thunderapp/templates/thunderapp/friends.html
+++ b/thundersite/thunderapp/templates/thunderapp/friends.html
@@ -1,40 +1,47 @@
 {% block info %}
-<style>
 
+<style>
+    .cen {
+        max-width: 300px;
+        margin: auto;
+    }
+    .headersize{
+        font-size: 25px;
+    }
 
 </style>
-<div id="profileinfo" class="modal " style="display:none">
+<div id="profileinfo" class="modal" style="display:none">
     <div class="modal-dialog">
 
         <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 id="friendUsername" class="modal-title"></h4>
+        <div class="modal-content text-danger">
+            <div class="modal-header font-weight-bold">
+                <span  id="friendUsername" class="headersize"></span>
          </div>
-            <div class="modal-body">
-                <img id="friendImg" src="" height="80">
+            <div class="modal-body cen">
+                <img id="friendImg" class="rounded-circle" src="" height="80" width="90" onerror="this.src='{{STATIC_URL}}/static/image-not-found.png'">
                 <div>
                     <div>
                         <br/>
-                    <span>Name: </span> <span id="friendName"></span>
+                    <span class="font-weight-bold" >Name: </span> <span id="friendName"></span>
                         </div>
                     <br>
 
-                    <span>Gender: </span><span id="friendGender"></span>
+                    <span class="font-weight-bold">Gender: </span><span id="friendGender"></span>
                     <div>
                         <br>
 
-                        <span>Date Of Birth: </span><span id="friendDOB"></span>
+                        <span class="font-weight-bold" >Date Of Birth: </span><span id="friendDOB"></span>
                     </div>                    <br>
 
 
-                    <div id="friendHobby"></div>
+                    <div id="friendHobby" class="font-weight-bold"></div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="messageUser" type="button" class="btn btn-default" data-dismiss="modal">Message</button>
+                <button id="messageUser" type="button" class="btn btn-primary" data-dismiss="modal">Message</button>
 
-                <button id="closefriendInfo" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="closefriendInfo" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
 
@@ -42,5 +49,6 @@
 </div>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 {% endblock %}
